--- a/public/layout/sidebar.html
+++ b/public/layout/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
 	<div class="logo">
-		<a href="http://www.creative-tim.com" class="simple-text">
+		<a href="" class="simple-text">
 			TimeAway Management
 		</a>
 	</div>
@@ -17,6 +17,12 @@
 				<a href="employee">
 					<i class="material-icons">person</i>
 					<p>Employee Masterfile</p>
+				</a>
+			</li>
+			<li>
+				<a href="forms-approval">
+					<i class="material-icons">list</i>
+					<p>Forms for Approval</p>
 				</a>
 			</li>
 		</ul>
